# CloudonixTask

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jamesmobiledev/cloudonixtask/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/jamesmobiledev/cloudonixtask/: MainActivity.java
app/src/main/res/drawable/: ic_green_ok.xml  ic_red_not_ok.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jamesmobiledev/cloudonixtask/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
